Fix level bar not showing in pantheon desktop

--- a/gtk-3.20/apps/_pantheon.scss
+++ b/gtk-3.20/apps/_pantheon.scss
@@ -280,3 +280,27 @@ LibraryWindow {
       0 1px 3px transparentize(#000, 0.88),
       0 1px 2px transparentize(#000, 0.77);
 }
+
+/**level bars**/
+
+.sidebar .source-list{
+  &.view {
+    &.level-bar {
+      &,&:selected,&:selected:focus{
+        background-color: transparentize(#fff, 0.86);
+        border: 1px solid transparentize(black, 0.86);
+        box-shadow: 0 1px 0 transparentize(#000, 0.75);
+        border-radius: 2px;
+      }
+      &.fill-block{
+        border: none;
+      }
+    }
+    &.fill-block{
+      &,&:hover,&:selected,&:selected:focus{
+        background-image: none;
+        background-color: $selected_bg_color;
+      }
+    }
+  }
+}
